# Caregiving-Wristband-Based-on-ESP32-S3

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  Development Plan.md  PROGRESS.md  README.md
.claude/: settings.local.json
components/common/: app_config.h
components/drivers/: CMakeLists.txt
components/drivers/alarm_io/: CMakeLists.txt  alarm_io.c  alarm_io.h
components/drivers/button/: CMakeLists.txt  button.c  button.h
components/drivers/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20.h
components/drivers/i2c/: i2c_master.c  i2c_master.h
components/drivers/i2s_mic/: CMakeLists.txt
components/drivers/max30102/: CMakeLists.txt
components/drivers/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
components/drivers/oled/: CMakeLists.txt  oled.c  oled.h
components/drivers/onewire/: CMakeLists.txt  onewire.c  onewire.h
components/drivers/usart/: CMakeLists.txt  usart.c
drivers/battery/: CMakeLists.txt
drivers/ds18b20/: CMakeLists.txt
drivers/i2c/: CMakeLists.txt  i2c_master.c  i2c_master.h
drivers/oled/: CMakeLists.txt  oled.c  oled.h
main/: CMakeLists.txt  app_config.h  main.c
